Fixed visibility on homepage.

--- a/client/src/app/home/home-page/home-page.component.css
+++ b/client/src/app/home/home-page/home-page.component.css
@@ -38,7 +38,7 @@
     bottom: 0;
     margin-left: -20%;
     width: 90%;
-    opacity: .75;
+    opacity: .50;
     z-index: -1;
 }
 
@@ -56,7 +56,7 @@
     font-weight: 700;
     margin: 0;
     color: #fff;
-    background: linear-gradient(to bottom,#fff 0%,#4e6773 150%);
+    background: linear-gradient(to bottom,#fff 0%,#4e6773 200%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent
 }
